--- a/WhisperProject/LaunchScreen.storyboard
+++ b/WhisperProject/LaunchScreen.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="22155" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
-    <device id="retina6_1" orientation="portrait" appearance="light"/>
+    <device id="retina6_5" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22131"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
@@ -15,31 +15,26 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="SPLASH" translatesAutoresizingMaskIntoConstraints="NO" id="z9t-0N-wPx">
-                                <rect key="frame" x="-26" y="0.0" width="459" height="896"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Splash2" translatesAutoresizingMaskIntoConstraints="NO" id="lgX-bS-Ud3">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                             </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Momento" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dfh-uv-CYl">
-                                <rect key="frame" x="118.5" y="390.5" width="177" height="65"/>
-                                <fontDescription key="fontDescription" name="Papyrus" family="Papyrus" pointSize="42"/>
-                                <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="Bcu-3y-fUS"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="dfh-uv-CYl" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="gSG-Rk-lTv"/>
-                            <constraint firstItem="dfh-uv-CYl" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" constant="-25" id="t2k-ZZ-j7b"/>
+                            <constraint firstItem="lgX-bS-Ud3" firstAttribute="trailing" secondItem="Bcu-3y-fUS" secondAttribute="trailing" id="IQg-ni-Kwt"/>
+                            <constraint firstItem="lgX-bS-Ud3" firstAttribute="top" secondItem="Ze5-6b-2t3" secondAttribute="top" id="XT9-iQ-SPJ"/>
+                            <constraint firstAttribute="bottom" secondItem="lgX-bS-Ud3" secondAttribute="bottom" id="XuD-8P-viK"/>
+                            <constraint firstItem="lgX-bS-Ud3" firstAttribute="leading" secondItem="Bcu-3y-fUS" secondAttribute="leading" id="lzd-oe-Em5"/>
                         </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-60.869565217391312" y="374.33035714285711"/>
+            <point key="canvasLocation" x="-62.318840579710148" y="373.66071428571428"/>
         </scene>
     </scenes>
     <resources>
-        <image name="SPLASH" width="375" height="812"/>
+        <image name="Splash2" width="391" height="846"/>
     </resources>
 </document>
